--- a/CarRentalSystem/css/general.css
+++ b/CarRentalSystem/css/general.css
@@ -1,3 +1,22 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+footer {
+    margin-top: auto;
+}
 body {
     font-family: "League Spartan", sans-serif;
     margin: 0;
@@ -35,9 +54,16 @@ h2 {
     text-align: center;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
-    justify-items: center;
+::-webkit-scrollbar {
+    height: 4px;
+    width: 8px;
+    background:  white;
+}
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background:  #006A71;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.75);
 }
