--- a/CarRentalSystem/css/manage_offers.css
+++ b/CarRentalSystem/css/manage_offers.css
@@ -1,3 +1,8 @@
+body{
+    font-family: "League Spartan", sans-serif;
+    margin: 0;
+    padding: 0;
+}
 main {
     padding: 40px;
 }
@@ -22,14 +27,42 @@ main {
 }
 
 .form-group input,
-.form-group select,
-.form-group textarea {
+.form-group select {
     width: 100%;
     padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 1px solid #006A71;
+    border-radius: 40px;
+}
+textarea{
+    border-radius: 40px;
+    width: 100%;
+    height: 50%;
+    resize: none;
+    padding: 10px;
+    border: 1px solid #006A71;
 }
 
+.new-offer {
+    display: none; 
+    flex-direction: row;
+    width: 60%;
+    margin: 0 auto;
+    box-shadow: 0 3px 13px rgba(0,0,0,0.1);
+    padding: 20px;
+    border-radius: 40px;
+    background-color: #fff;
+}
+.new-offer div{
+    width: 80%;
+}
+
+.offer-sec1,.offer-sec2,.offer-sec3,.offer-sec4{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    justify-content: center;
+    gap: 5px;
+}
 /* Button Styles */
 .btn {
     background-color: #006A71;
