--- a/CarRentalSystem/css/about us.css
+++ b/CarRentalSystem/css/about us.css
@@ -42,28 +42,30 @@ header nav ul li a:hover::after {
 
 /* أيقونة البروفايل */
 header nav ul li a.profile-link.active svg path {
-  fill: #48A6A7;
+  fill:#fff;
+  color: #fff;
 }
 
 .about-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 85%;
   height: auto;
   margin: 40px auto;
   padding: 40px 20px;
-  background-color: #F2EFE7;
+  border-radius: 40px;
+  background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .about-container h1 {
   width: 300px;
   margin: auto;
-  border-bottom: 2px solid #9ACBD0;
+  border-bottom: 2px solid #48A6A7;
   text-align: center;
   margin-bottom: 50px;
   padding: 15px;
-  color: #9ACBD0;
+  color: #48A6A7;
 }
 
 .about-section-container {
@@ -76,34 +78,39 @@ header nav ul li a.profile-link.active svg path {
 }
 
 .about-section {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-  width: 40%;
-  border-bottom: 2px solid #9ACBD0;
-  margin-bottom: 30px;
-  gap: 25px;
-  padding: 25px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 40%;
+    border-bottom: 2px solid #48A6A7;
+    margin-bottom: 30px;
+    gap: 5px;
+    padding: 25px;
+    flex-direction: row;
 }
 
 .about-section h2 {
-  color: #9ACBD0;
-  border-left: 5px solid #9ACBD0;
+  color:#48A6A7;
+  border-left: 5px solid #48A6A7;
   padding-left: 10px;
 }
 
 .about-section p {
   margin-bottom: 20px;
+  color: #000000b3;
 }
 
 .features-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80%;
   height: auto;
   margin: 40px auto;
   padding: 40px 20px;
-  background-color: #F2EFE7;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #48A6A7;
+  border-radius: 40px;
 }
 
 .features-row-container {
@@ -121,29 +128,29 @@ header nav ul li a.profile-link.active svg path {
 .features-container h1 {
   width: 300px;
   margin: auto;
-  border-bottom: 2px solid #9ACBD0;
+  border-bottom: 2px solid #48A6A7;
   text-align: center;
   margin-bottom: 50px;
   padding: 15px;
-  color: #9ACBD0;
+  color: #48A6A7;
 }
 
 .features-container .row {
   display: flex;
   align-items: center;
   width: 100%;
-  gap: 10px;
   padding: 25px;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
-  border-bottom: 3px solid #9ACBD0;
-}
+  justify-content: space-evenly;}
 
 .features-row-container p {
   width: 40%;
+  color:  #000000b3;
 }
-
+.features-row-container p b{
+  color:  #48A6A7;
+}
 /* تنسيق الصور داخل الجدول */
 .features-img {
   width: 30%;
