--- a/CarRentalSystem/css/AdminDashboard.css
+++ b/CarRentalSystem/css/AdminDashboard.css
@@ -15,6 +15,15 @@ main {
     padding: 20px;
     border-radius: 40px;
     background-color: #fff;
+    box-shadow: 0 3px 13px rgba(0,0,0,0.3);
+    border-bottom: 2px solid transparent;
+    border-top: 2px solid transparent;
+}
+.add-car:hover {
+    border-bottom: 2px solid #006A71;
+    border-top: 2px solid #006A71;
+    border-radius: 40px;
+    transition: all 200ms ease-in-out;
 }
 /* إخفاء div.add-car افتراضيًا */
 .add-car {
@@ -97,11 +106,16 @@ main {
     padding: 15px;
     margin-bottom: 15px;
     transition: transform 0.3s ease;
+    border-bottom: 2px solid transparent;
+    border-top: 2px solid transparent;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .rental-request:hover {
-    box-shadow: 0 2px 15px ;
-    transform: scale(1.02);
+    border-bottom: 2px solid #006A71;
+    border-top: 2px solid #006A71;
+    border-radius: 40px;
+    transition: all 200ms ease-in-out;
 }
 
 .rental-request-header {
@@ -176,8 +190,8 @@ main {
     background-color: #006A71;
     color: white;
     border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
+    padding: 15px 25px;
+    border-radius: 40px;
     cursor: pointer;
     transition: all 0.3s ease;
     font-weight: 500;
@@ -310,7 +324,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    transform: scale(1.05);
+    background-color: #48A6A7;
 }
 
 /* Animation */
