--- a/CarRentalSystem/css/about us.css
+++ b/CarRentalSystem/css/about us.css
@@ -55,9 +55,16 @@ header nav ul li a.profile-link.active svg path {
   padding: 40px 20px;
   border-radius: 40px;
   background-color: #fff;
+  border-bottom: 2px solid transparent;
+  border-top: 2px solid transparent;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.about-container:hover {
+  border-bottom: 2px solid #48A6A7;
+  border-top: 2px solid #48A6A7;
+  border-radius: 40px;
+  transition: all 200ms ease-in-out;
+}
 .about-container h1 {
   width: 300px;
   margin: auto;
@@ -108,11 +115,18 @@ header nav ul li a.profile-link.active svg path {
   margin: 40px auto;
   padding: 40px 20px;
   background-color: #fff;
+  border-bottom: 2px solid transparent;
+  border-top: 2px solid transparent;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   color: #48A6A7;
   border-radius: 40px;
 }
-
+.features-container:hover {
+  border-bottom: 2px solid #48A6A7;
+  border-top: 2px solid #48A6A7;
+  border-radius: 40px;
+  transition: all 200ms ease-in-out;
+}
 .features-row-container {
   display: flex;
   align-items: center;
