--- a/CarRentalSystem/css/profile.css
+++ b/CarRentalSystem/css/profile.css
@@ -1,19 +1,15 @@
 /* Professional Notification Styling */
 .notification-card {
     position: relative;
-    padding: 25px;
-    border-radius: 12px;
-    margin: 20px 0;
+    width: 50%;
+    padding: 15px;
+    border-radius: 40px;
+    margin: 20px auto;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     gap: 20px;
     animation: slideIn 0.5s ease;
-}
-
-.notification-card.success {
-    background: #E8F5E9;
-    border-left: 5px solid #1e7e34;
 }
 
 .notification-card .icon-container {
@@ -23,7 +19,7 @@
 }
 
 .checkmark-circle {
-    stroke: #1e7e34;
+    stroke: #006A71;
     stroke-width: 3;
     stroke-dasharray: 166;
     stroke-dashoffset: 166;
@@ -31,7 +27,7 @@
 }
 
 .checkmark-check {
-    stroke: #1e7e34;
+    stroke: #006A71;
     stroke-width: 3;
     stroke-dasharray: 48;
     stroke-dashoffset: 48;
@@ -39,7 +35,7 @@
 }
 
 .notification-card h4 {
-    color: #1e7e34;
+    color: #006A71;
     margin: 0 0 8px;
     font-size: 1.25rem;
 }
@@ -53,7 +49,7 @@
 .close-btn {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 20px;
     background: none;
     border: 0;
     font-size: 1.2rem;
@@ -104,17 +100,29 @@
     padding: 30px;
     background-color: #ffffff;
     border-radius: 40px;
-    box-shadow: 0 3px 13px;
+    border-top:2px solid transparent;
+    border-bottom:2px solid transparent;
+    box-shadow: 0 2px 13px rgba(0, 0, 0, 0.3);
 
 }
-
+.profile-container:hover {
+    border-bottom: 2px solid #006A71;
+    border-top: 2px solid #006A71;
+    border-radius: 40px;
+    transition: all 200ms ease-in-out;
+}
 .profile-header {
     text-align: center;
     margin-bottom: 30px;
 }
 
 .profile-header h1 {
+    width: fit-content;
+    margin: 10px auto;
     text-align: center;
+    border-radius: 40px;
+    padding: 10px 20px;
+    /* border-bottom: 2px solid #006A71; */
 }
 
 .profile-form {
@@ -175,12 +183,14 @@
     background-color: #495057;
     color: white;
 }
-.btn-warning{
+.btn-warning,
+.btn.btn-warning.btn-warning{
     background-color: #006A71;
     border-radius: 40px;
     color: white;
 }
-.btn-warning:hover{
+.btn-warning:hover,
+.btn.btn-warning.btn-warning:hover{
     background-color: #495057;
     color: white;
 }
@@ -192,13 +202,13 @@
     margin-bottom: 25px;
 }
 
-.success {
+/* .success {
     padding: 20px;
     background: #006A71;
     color: #000;
     border-radius: 6px;
     margin-bottom: 25px;
-}
+} */
 
 @media (max-width: 768px) {
     .profile-form {
