--- a/CarRentalSystem/css/request_to_change_role.css
+++ b/CarRentalSystem/css/request_to_change_role.css
@@ -1,16 +1,19 @@
 main {
     padding: 40px;
+    color: #006A71;
 }
-
-.table-container {
-    background: white;
-    border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+.role-change-requests .notification.success{
+    margin: 10px auto;
+    color: #006A71;
+    font-weight: bold;
+}
+.no-pending{
+    color: #006A71!important;
+    font-weight: bold!important;
 }
 
 table {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
     font-family: "League Spartan", sans-serif;
     font-size: 0.95rem;
@@ -20,7 +23,7 @@ th,
 td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #006A71;
 }
 
 th {
@@ -69,13 +72,22 @@ tr:hover {
 }
 
 .notification.success {
-    background: #E8F5E9;
-    color: #1e7e34;
+    width: 50%;
+    display: flex;
+    justify-content: center;
 }
 
 .notification.warning {
-    background: #FFFDE7;
-    color: #7a5d00;
+    position: relative;
+    width: 50%;
+    padding: 15px;
+    border-radius: 40px;
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    animation: slideIn 0.5s ease;
 }
 
 @keyframes fadeIn {
@@ -94,6 +106,7 @@ tr:hover {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    justify-content: center;
 }
 
 .header-actions h2 {
