--- a/CarRentalSystem/css/rent_car.css
+++ b/CarRentalSystem/css/rent_car.css
@@ -2,20 +2,26 @@ body {
     background-color: #f8f9fa;
     font-family: "League Spartan", sans-serif;
     color: #006A71;
+    
 }
 
 .rental-request {
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     background: white;
     border-radius: 40px;
     padding: 30px;
     margin: 40px auto;
+    font-size: 17px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
 .mb-3 input {
-    height: 40px;
+    height: 35px;
+    width: 50%;
+}
+.mb-3 input:hover {
+  border-color: #006A71;
 }
 
 .rental-request:hover {
@@ -24,8 +30,9 @@ body {
 }
 
 .car-image {
-    width: 300px;
-    height: 200px;
+    width: 100%px;
+    height: 250px;
+
     object-fit: cover;
     border-radius: 40px;
     margin-bottom: 20px;
