--- a/CarRentalSystem/css/index.css
+++ b/CarRentalSystem/css/index.css
@@ -20,18 +20,19 @@
     background-color: #fff;
     color: #000;
     overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    width: 500px;
-    height: 225px;
+    transition: all 300ms ease;
+    width: 510px;
+    height: 260px;
     text-align: center;
     align-items: center;
     padding: 0;
     border-radius: 40px;
+    border: none;
     border-right: 3px solid transparent;
-}
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);}
 
 .card img {
-    width: 60%;
+    width: 65%;
     height: 100%;
     object-fit: cover;
     padding: 0;
@@ -65,6 +66,7 @@
 .car-details {
     display: flex;
     width: 40%;
+    padding: 10px 0;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -99,12 +101,13 @@
     border-radius: 25px;
     font-weight: 600;
     margin-top: 15px;
-    transition: background 0.3s ease, transform 0.3s ease;
+    transition: all 0.3 ease;
 }
 
-.btn-rent:hover {
+.btn-rent:hover,
+.btn-details:hover {
     background-color: #48A6A7;
-    transform: scale(1.05);
+    transition: all 0.4s ease;
 }
 
 .btn-disabled {
@@ -114,10 +117,11 @@
 }
 
 /* Rental button styling */
-.btn-rent {
+.btn-rent,
+.btn-details {
     background-color: #006A71;
     color: white;
-    padding: 10px 20px;
+    padding: 5px 15px;
     border: none;
     border-radius: 40px;
     margin-top: 10px;
@@ -127,13 +131,14 @@
 .btn-disabled {
     background-color: #6c757d;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 40px;
     width: 70%;
     margin-top: 10px;
     cursor: not-allowed;
 }
+
 
 /* Space between premium and regular sections */
 .premium-section {
