--- a/CarRentalSystem/css/sort-filter.css
+++ b/CarRentalSystem/css/sort-filter.css
@@ -1,31 +1,33 @@
 .sort-filter {
-    margin-bottom: 80px;
-    margin-left: 80px;
-    margin-right: 100px;
+    /* margin-bottom: 30px; */
+    margin: 0 20px 30px;
     padding: 20px;
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
-    gap: 15px;
     flex-wrap: wrap;
+    width: 30%;
 }
-
+.sort-filter form{
+    width: fit-content;
+    gap: 20px;
+}
 .sort-filter label {
+    font-size: 20px;
     font-weight: 600;
     color: #006A71;
-    flex: 1 1 100%;
     text-align: left;
-    padding-bottom: 10px;
+    padding: 10px;
     margin: 0;
 }
 
 .sort-filter select {
-    flex: 1;
+    width: 50%;
     padding: 12px 20px;
     border: 2px solid #006A71;
-    border-radius: 25px;
+    border-radius: 60px;
     background-color: #fff;
     font-size: 1rem;
     font-weight: 500;
@@ -51,6 +53,7 @@
 
 .sort-filter button {
     padding: 12px 25px;
+    margin: 10px;
     background: linear-gradient(135deg, #006A71, #004B50);
     color: #fff;
     border: none;
